--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+    "test": "mocha"
   },
   "dependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "pg": "^7.11.0"
   },
   "devDependencies": {
+    "mocha": "^6.1.4",
     "request": "^2.88.0",
     "tape": "^4.7.0"
   },
