--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
