--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test": "mocha"
   },
   "dependencies": {
+    "browser-session-store": "^2.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
-    "pg": "^7.11.0"
+    "http": "0.0.0",
+    "pg": "^7.11.0",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
