--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "pg": "^7.11.0",
-    "socketio": "^1.0.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
